--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,6 @@
             </div>
           </div>
         </div>
-        <script src="index.js"></script>
     </main>
     <footer class="pt-4 alert text-center">
       <div>
@@ -67,5 +66,6 @@
       </div>
       <div class="text-muted">&copy; <a href="https://github.com/marmooo">marmooo</a></div>
     </footer>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
